--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <!-- Base application theme -->
+    <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
@@ -10,13 +10,19 @@
 
     <!-- Define a style for the name TextView -->
     <style name="NameTextViewStyle">
-        <item name="android:textColor">@android:color/holo_blue_dark</item>
+        <item name="android:textColor">@color/answer_button</item>
         <item name="android:textSize">18sp</item>
         <item name="android:padding">8dp</item>
     </style>
 
     <!-- Define a style for the score TextView -->
     <style name="ScoreTextViewStyle">
+        <item name="android:textColor">@android:color/holo_green_dark</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:padding">8dp</item>
+    </style>
+
+    <style name="TimeTextViewStyle">
         <item name="android:textColor">@android:color/holo_green_dark</item>
         <item name="android:textSize">18sp</item>
         <item name="android:padding">8dp</item>
